force/src/objects/CatTabDefault__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Default setting for tabs in the Quest Landing Page framework</description>
    <fields>
        <fullName>Category_Links__c</fullName>
        <description>URL to article that contains sidebar links for the Category</description>
        <label>Category Links</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Article__c</fullName>
        <description>Article that will display when the Category Tab is selected</description>
        <label>Default Article</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Category__c</fullName>
        <description>Name for data category to use as filter when performing a keyword search from the Default Article on the Quest Landing Page</description>
        <label>Search Category</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Quest Category Tab Defaults</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Default_Article__c</columns>
        <columns>Category_Links__c</columns>
        <columns>Search_Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>